# dlstreamer

./: CMakeLists.txt  RELEASE_NOTES.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/actions/common/code-style/: action.yml
.github/actions/common/license-namespace-checker/: action.yaml
.github/actions/common/pylint/: action.yaml
.github/actions/common/shellcheck/: action.yaml
.github/actions/common/yamllint/: action.yaml
.github/workflows/: dls-build-and-test-deb_pkgs-and-deb_imgs.yaml  dls-build-and-test-windows.yaml  dls-build-dev-docker-images-and-run-unit.yaml  dls-build-documentation.yaml  dls-build-sources-make-build.yaml  dls-coverity.yaml  dls-download-models-test.yaml  dls-download-models.yaml  dls-pr-workflow.yaml  dls-self-hosted-runners-cleanup.yaml  dls-test-optimizer.yaml  dls-weekly-cached-images.yaml  documentation-check.yaml  scorecard.yml  trivy-config-mode.yaml  zizmor-scan.yaml
cmake/vcpkg/triplets/: x64-windows-mixed.cmake
docs/: .gitignore  build_html.sh
docs/_docker/: Dockerfile
docs/source/: index.md  release-notes.md
docs/source/dev_guide/: gpu_device_selection.md
scripts/optimizer/: __main__.py
src/monolithic/gst/elements/gvametapublish/kafka/: CMakeLists.txt
src/monolithic/gst/elements/gvametapublish/mqtt/: CMakeLists.txt  generate_client_id.hpp  gvametapublishmqtt.cpp
src/monolithic/gst/inference_elements/common/post_processor/: meta_attacher.cpp
src/monolithic/gst/inference_elements/common/post_processor/converters/to_roi/: blob_to_roi_converter.cpp  blob_to_roi_converter.h  boxes.h  boxes_labels.cpp  boxes_labels.h  boxes_labels_scores_base.h  boxes_scores.h
tests/unit_tests/tests_gstgva/: run_tests.py  test_pipeline_g3dlidarparse.py
tests/unit_tests/tests_gstgva/test_files/: 000001.pcd
